# vessel

./: .gitignore  .hivemind.toml  .justfile  CLAUDE.md  Cargo.toml  README.md  build.rs  cliff.toml  release.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  pull-request.yml
dashboard/: index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
dashboard/e2e/: helpers.ts  review-loop.e2e.ts
dashboard/src/: App.vue  style.css
dashboard/src/api/: client.test.ts  client.ts
dashboard/src/router/: index.ts
dashboard/src/stores/: generations.test.ts  generations.ts  profiles.ts  projects.ts  settings.ts
dashboard/src/views/: GenerationView.vue  HomeView.vue  NewPostView.vue  ProfilesView.vue  ProjectsView.vue  SettingsView.vue
docs/: AGENT_BROWSER_FEEDBACK_LOOP.md  VESSEL_SPEC.md
docs/superpowers/plans/: 2026-06-27-vessel-backend.md
migrations/: 001_init.sql  002_feedback_loop.sql
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: feedback.rs  generations.rs  mod.rs  profiles.rs  projects.rs  review.rs  settings.rs
src/db/: feedback.rs  generations.rs  mod.rs  profiles.rs  projects.rs  revisions.rs  schema.rs
src/generation/: git.rs  github.rs  mod.rs  prompt.rs
src/hivemind/: client.rs  mod.rs
src/mcp/: mod.rs  prompts.rs  tools.rs
tests/: api_feedback.rs  api_generations.rs  api_profiles.rs  api_projects.rs  api_review.rs  api_settings.rs  config_test.rs  db_init.rs  db_migrations.rs  db_profiles.rs  db_revisions.rs  e2e_loop.rs  git_context.rs  github_token.rs  hivemind_client.rs  mcp_prompts.rs  mcp_tools.rs  platform_formatters.rs  prompt_assembly.rs  smoke.rs
