[package]
name = "oxvessel"
version = "0.1.1"
edition = "2024"
description = "Developer release announcement tool"
license = "MIT"

[[bin]]
name = "vessel"
path = "src/main.rs"

[lib]
name = "vessel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libsql = "0.9"
rmcp = { version = "2.0", features = ["server", "transport-io"] }
reqwest = { version = "0.13", features = ["json", "query"] }
git2 = "0.21"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
aes-gcm = "0.11"
base64 = "0.22"
rand = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
axum-test = "21"
