[package]
name = "oxvessel"
version = "0.1.6"
edition = "2024"
description = "Developer release announcement tool"
license = "AGPL-3.0-only"
# Whitelist for `cargo package`: dashboard/dist is gitignored, and without
# this cargo publish ships a crate with no dashboard — rust-embed then embeds
# nothing and the installed binary 404s on every UI route.
include = [
  "src/**",
  "migrations/**",
  "dashboard/dist/**",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }vessel-{ target }.tar.gz"
bin-dir = "vessel"
pkg-fmt = "tgz"

[[bin]]
name = "vessel"
path = "src/main.rs"

[lib]
name = "vessel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
libsql = "0.9"
rmcp = { version = "2.0", features = ["server", "transport-io"] }
reqwest = { version = "0.13", features = ["json", "query"] }
git2 = "0.21"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
aes-gcm = "0.11"
base64 = "0.22"
rand = "0.10"
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
axum-test = "21"
